--- a/src/templates/partials/components/_breadcrumbs.html
+++ b/src/templates/partials/components/_breadcrumbs.html
@@ -7,7 +7,17 @@
 			</a>
 		</li>
 		<li class="breadcrumbs__item">
-			<span class="breadcrumbs__title" itemprop="title">Москва</span>
+			<a href="#" class="breadcrumbs__link" itemprop="url">
+				<span class="breadcrumbs__title" itemprop="title">Ткани</span>
+			</a>
+		</li>
+		<li class="breadcrumbs__item">
+			<a href="#" class="breadcrumbs__link" itemprop="url">
+				<span class="breadcrumbs__title" itemprop="title">Атлас</span>
+			</a>
+		</li>
+		<li class="breadcrumbs__item">
+			<span class="breadcrumbs__title" itemprop="title">Дюпон</span>
 		</li>
 	</ul>
 </div>
