--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -52,9 +52,7 @@
 		}
 	}//.button--transparent
 
-	// &--accent{
-	// 	color: #fff;
-	// }//.button--accent
+	&--yellow{color: $color-text;}//.button--yellow
 
 	&--muted{
 		&:hover{
