--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -86,7 +86,8 @@ $bxs-i: inset 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 
 //button colors
 $button-colors: (
 	accent         : $color-accent,
-	default        : $color-main ,
+	default        : $color-main,
+	yellow         : $color-third,
 	success        : $color-success,
 	error          : $color-danger,
 	info           : $color-info,
