--- a/src/templates/data/data.html
+++ b/src/templates/data/data.html
@@ -58,7 +58,7 @@ mainMenu = [
 %}
 
 {% set
-cityList1 = [
+cityList = [
 	{
 		city: 'Ангарск'
 	},
@@ -103,12 +103,7 @@ cityList1 = [
 	},
 	{
 		city: 'Иркутск'
-	}
-]
-%}
-
-{% set
-cityList2 = [
+	},
 	{
 		city: 'Казань'
 	},
@@ -153,12 +148,7 @@ cityList2 = [
 	},
 	{
 		city: 'Орск'
-	}
-]
-%}
-
-{% set
-cityList3 = [
+	},
 	{
 		city: 'Пенза'
 	},
@@ -203,12 +193,7 @@ cityList3 = [
 	},
 	{
 		city: 'Ульяновск'
-	}
-]
-%}
-
-{% set
-cityList4 = [	
+	},
 	{
 		city: 'Уфа'
 	},
@@ -236,6 +221,21 @@ cityList4 = [
 	{
 		city: 'Ярославль'
 	}
+]
+%}
+
+{% set
+cityList2 = [
+]
+%}
+
+{% set
+cityList3 = [
+]
+%}
+
+{% set
+cityList4 = [	
 ]
 %}
 
