--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -24,7 +24,7 @@
 
 	<link rel="stylesheet" media="all" href="css/app.css">
 </head>
-<body itemscope="itemscope" itemtype="http://schema.org/WebPage">
+<body class="loading" itemscope="itemscope" itemtype="http://schema.org/WebPage">
 	
 	<!-- begin wrapper -->
 	<div class="wrapper {{ wrapperClass }}">
@@ -40,13 +40,9 @@
 	</div>
 	<!-- end windows -->
 
-	<!-- begin go-top -->
 	<div class="go-top js-go-top">Наверх</div>
-	<!-- end go-top -->
-
-	<!-- begin overlay -->
 	<div class="overlay js-overlay"></div>
-	<!-- end overlay -->
+	<div class="preloader"></div>
 
 	<!-- begin scripts -->
 	<script type="text/javascript" src="js/libs.min.js"></script>
