--- a/src/templates/partials/components/_catalog-filter.html
+++ b/src/templates/partials/components/_catalog-filter.html
@@ -10,19 +10,19 @@
 				<div class="catalog-filter__subtitle accordeon__title">Цвет</div>
 				<div class="catalog-filter__content accordeon__content js-scroll">
 					<div class="catalog-filter__subitem">
-						{{ item.checkbox('белый', 'checkbox--transform') }}
+						{{ item.checkbox('белый', 'checkbox--transform js-checkbox') }}
 						<span class="catalog-filter__color" data-filter-color="#fff"></span>
 					</div>
 					<div class="catalog-filter__subitem">
-						{{ item.checkbox('кремовый', 'checkbox--transform') }}
+						{{ item.checkbox('кремовый', 'checkbox--transform js-checkbox') }}
 						<span class="catalog-filter__color" data-filter-color="#e4d8cb"></span>
 					</div>
 					<div class="catalog-filter__subitem">
-						{{ item.checkbox('синий', 'checkbox--transform') }}
+						{{ item.checkbox('синий', 'checkbox--transform js-checkbox') }}
 						<span class="catalog-filter__color" data-filter-color="#46358d"></span>
 					</div>
 					<div class="catalog-filter__subitem">
-						{{ item.checkbox('зеленый', 'checkbox--transform') }}
+						{{ item.checkbox('зеленый', 'checkbox--transform js-checkbox') }}
 						<span class="catalog-filter__color" data-filter-color="#233e23"></span>
 					</div>
 
