--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -198,6 +198,7 @@
 		width: 100%;
 		border-right: 0;
 		background-color: #fff;
+		@include tr;
 		@include respond-to(xs) {
 			border-left: 0;
 			border-top: 0;
@@ -210,6 +211,7 @@
 		background-color: $color-accent;
 		border: 0;
 		position: relative;
+		@include tr;
 		@extend %flexCenter;
 		justify-content: center;
 		&::before{
@@ -218,6 +220,7 @@
 			position: absolute;
 			left: 0;
 			top: 0;
+			@include tr;
 		}
 	}//.search__btn
 
