--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -84,14 +84,21 @@
 	}//.change-city__in
 
 	&__list{
+		columns: auto 4;
+
+		@include respond-to(sm) {
+			columns: auto 3;
+		}
 
 		@include respond-to(xs) {
-			margin-top: 5px;
-			width: 50%;
+			columns: auto;
+			width: 100%;
+			margin-bottom: 0px;
 		}
 
 		&_country{
 			display: inline-block;
+			columns: auto;
 			padding-top: $base-indent;
 			padding-right: 70px;
 			margin-top: $base-indent;
@@ -100,9 +107,15 @@
 	}//.change-city__list
 
 	&__item{
+		margin-left: 15px;
 		font-size: 14px;
 		cursor: pointer;
 		position: relative;
+
+		@include respond-to(xs) {
+			display: inline-block;
+			width: 45%;
+		}
 
 		& + &{
 			margin-top: 5px;
