--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -19,6 +19,21 @@ productDesc:
  - title: Артикул
    desc: ас06
 
+related:
+ - icon: cloth
+   title: Ткани
+   tabs: 1
+   class: active
+ - icon: thread
+   title: Нитки
+   tabs: 2
+ - icon: zipper
+   title: Молнии
+   tabs: 3
+ - icon: tapes
+   title: Резинки
+   tabs: 4
+
 ---
 
 {% extends "layouts/_layout.html" %}
@@ -34,6 +49,8 @@ productDesc:
 			{% include "partials/components/_breadcrumbs.html" %}
 
 			<a href="#" class="button button--link card__btn card__btn--back">Вернуться в каталог</a>
+
+			<a href="#" class="card__back">Атлас</a>
 		</div>
 		<!-- end card__top-line -->		
 		<!-- begin card__wrap -->
@@ -57,14 +74,66 @@ productDesc:
 				</div>
 			</div>
 			<!-- end card__image -->
+
 			<!-- begin card__desc -->
 			<div class="card__desc">
 				<h1 class="h1 product-item__title card__title" itemprop="name">Атлас дюпон <span>white</span></h1>
 
 				<div class="card__price">340,00 <span>руб/м</span></div>
+
+				<!-- begin item-select -->
+				<div class="item-select__group card__item-select">
+					<div class="item-select js-item-select">
+						<div class="item-select__caption">Цвет</div>
+						<div class="item-select__value">
+							<span class="item-select__color" data-item-select-color="#233e23"></span>
+							<span class="item-select__title">Темно зеленый</span>
+						</div>
+						<div class="item-select__list">
+							<div class="item-select__item">
+								<span class="item-select__color" data-item-select-color="#233e23"></span>
+								<span class="item-select__title">Темно зеленый</span>
+								<span class="item-select__subtitle">в наличии</span>
+							</div>
+							<div class="item-select__item">
+								<span class="item-select__color" data-item-select-color="#46358d"></span>
+								<span class="item-select__title">Темно зеленый</span>
+								<span class="item-select__subtitle ends">заканчивается</span>
+							</div>
+							<div class="item-select__item">
+								<span class="item-select__color" data-item-select-color="#e4d8cb"></span>
+								<span class="item-select__title">Темно зеленый</span>
+								<span class="item-select__subtitle">в наличии</span>
+							</div>
+						</div>
+					</div>
+					<div class="item-select item-select--count js-item-select is-hidden">
+						<div class="item-select__caption">Количество</div>
+						<div class="item-select__value">
+							<div class="item-select__control item-select__control--minus"></div>
+							<span class="item-select__title">Выбрать</span>
+							<div class="item-select__control item-select__control--plus"></div>
+						</div>
+						<div class="item-select__list">
+							<div class="item-select__item">
+								<span class="item-select__title">5 м в нарезку</span>
+							</div>
+							<div class="item-select__item">
+								<span class="item-select__title">25 м <span>(1 рулон)</span></span>
+							</div>
+							<div class="item-select__item">
+								<span class="item-select__title">Темно зеленый</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- end item-select -->
 				
 				<div class="button-box">
-					<button class="button button--yellow card__btn card__btn--cart">Добавить в корзину</button>
+					<button class="button button--yellow card__btn card__btn--cart">
+						Добавить в корзину
+						<span></span>
+					</button>
 
 					<div tooltip="в избранное">
 						<button class="button-icon button-icon--fav js-button-icon--fav card__btn card__btn--fav"></button>
@@ -73,31 +142,38 @@ productDesc:
 
 				<!-- begin card__info -->
 				<div class="card__info">
-					<div class="tab js-card-tab-info">
-						<ul class="tab__titles">
-							<li class="tab__title"><a class="tab__link" href="#tabs-1">Характеристики</a></li>
-							<li class="tab__title"><a class="tab__link" href="#tabs-2">Описание</a></li>
-						</ul>
-						<div class="tab__contentes">
-							<div class="tab__content" id="tabs-1">
+
+					<div class="tab tab--transform js-tab--transform">
+						<div class="tab__wrap">
+							<div class="tab__titles js-tab">
+								<div class="tab__title is-active" data-tab="0">Характеристики</div>
+								<div class="tab__title" data-tab="1">Описание</div>
+							</div>
+							<div class="tab__contentes">
+								<div class="tab__content tab__content--car" style="display: block;" data-tab-content="0">
 								
-								<div class="bz-table bz-table--dot">
-									<ul class="bz-table__list">
-										{% for item in productDesc %}
-										<li class="bz-table__item">
-											<span class="bz-table__subitem"><span>{{ item.title }}</span></span>
-											<a href="#" class="bz-table__subitem">{{ item.desc }}</a>
-										</li>
-										{% endfor %}
-									</ul>
+									<div class="bz-table bz-table--dot">
+										<ul class="bz-table__list">
+											{% for item in productDesc %}
+											<li class="bz-table__item">
+												<span class="bz-table__subitem"><span>{{ item.title }}</span></span>
+												<a href="#" class="bz-table__subitem">{{ item.desc }}</a>
+											</li>
+											{% endfor %}
+										</ul>
+									</div>
+
 								</div>
 
-							</div>
-							<div class="tab__content" id="tabs-2">
-								<p>Плотная ткань с гладкокрашенной отделкой. Лицевая сторона гладкая, с мягким атласным блеском. Изнаночная - матовая, с зернистой поверхностью. Материал прочный, эластичный, хорошо драпирующийся. Атлас широко применяется для изготовления праздничных и концертных нарядов, свадебных платьев.</p>
+								<div class="tab__content tab__content--product" data-tab-content="1">
+
+									<p>Плотная ткань с гладкокрашенной отделкой. Лицевая сторона гладкая, с мягким атласным блеском. Изнаночная - матовая, с зернистой поверхностью. Материал прочный, эластичный, хорошо драпирующийся. Атлас широко применяется для изготовления праздничных и концертных нарядов, свадебных платьев.</p>
+
+								</div>
 							</div>
 						</div>
 					</div>
+
 				</div>
 				<!-- end card__info -->
 
@@ -107,42 +183,118 @@ productDesc:
 		<!-- end card__wrap -->
 
 		<!-- begin card__related -->
-		<div class="card__related">
+		<div class="card__related related">
+
+			<h2 class="h2 page-title">Сопутствующие товары</h2>
+
 			<div class="tab js-card-tab-related">
 				<ul class="tab__titles">
+					{% for item in related %}
 					<li class="tab__title">
-						<a class="tab__link" href="#tabs-1">
-							{{mixin.icon('cloth', 'tab__icon')}}
-							<span class="tab__text">Ткани</span>
+						<a class="tab__link" href="#related-tabs-{{ item.tabs }}">
+							<span class="tab__icon_wrap">
+								<svg class="icon icon-tapes tab__icon">
+									<use xlink:href="img/sprite.svg#{{ item.icon }}"></use>
+								</svg>
+							</span>
+							<span class="tab__text">{{ item.title }}</span>
+						</a>
+					</li>
+					{% endfor %}﻿
+					<li class="tab__title">
+						<a class="tab__link" href="#related-tabs-5">
+							<span class="tab__icon_wrap">{{mixin.icon('button', 'tab__icon')}}</span>
+							<span class="tab__text">Пуговицы <br>и кнопки</span>
 						</a>
 					</li>
 					<li class="tab__title">
-						<a class="tab__link" href="#tabs-2">{{mixin.icon('thread', 'tab__icon')}}</a>
-					</li>
-					<li class="tab__title">
-						<a class="tab__link" href="#tabs-3">{{mixin.icon('button', 'tab__icon')}}</a>
-					</li>
-					<li class="tab__title">
-						<a class="tab__link" href="#tabs-4">{{mixin.icon('zipper', 'tab__icon')}}</a>
-					</li>
-					<li class="tab__title">
-						<a class="tab__link" href="#tabs-5">{{mixin.icon('tapes', 'tab__icon')}}</a>
-					</li>
-					<li class="tab__title">
-						<a class="tab__link" href="#tabs-6">{{mixin.icon('tapes', 'tab__icon')}}</a>
+						<a class="tab__link" href="#related-tabs-6">
+							<span class="tab__icon_wrap">{{mixin.icon('tapes', 'tab__icon')}}</span>
+							<span class="tab__text">Ленты <br> отделочные</span>
+						</a>
 					</li>
 				</ul>
 				<div class="tab__contentes">
-					<div class="tab__content" id="tabs-1">
-						<p>Плотная ткань с гладкокрашенной отделкой. Лицевая сторона гладкая, с мягким атласным блеском. Изнаночная - матовая, с зернистой поверхностью. Материал прочный, эластичный, хорошо драпирующийся. Атлас широко применяется для изготовления праздничных и концертных нарядов, свадебных платьев.</p>
+					<div class="tab__content" id="related-tabs-1">
+
+						<div class="bz-slider bz-slider--related">
+							<div class="bz-slider__slides js-bz-slider--related">
+								{% for i in range(0, 5) %}
+								<a class="related__item" href="#">
+									<div class="related__img">
+										<img src="http://via.placeholder.com/150x150" alt="Атлас дюпон «izumrud»">
+									</div>
+									<div class="related__desc">
+										<span class="related__title">Нитки <span>dor tak 40/2</span></span>
+										<span class="related__price">12,80 руб</span>
+									</div>
+								</a>
+								{% endfor %}﻿
+							</div>
+						</div>
+
 					</div>
-					<div class="tab__content" id="tabs-2">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel repudiandae ipsam, obcaecati rem facere reprehenderit illum laudantium praesentium voluptate! Ratione.</p>
+					<div class="tab__content" id="related-tabs-2">
+
+						<div class="bz-slider bz-slider--related">
+							<div class="bz-slider__slides js-bz-slider--related">
+								{% for i in range(0, 11) %}
+								<a class="related__item" href="#">
+									<div class="related__img">
+										<img src="img/products/thread/{{i+1}}.png" alt="Атлас дюпон «izumrud»">
+									</div>
+									<div class="related__desc">
+										<span class="related__title">Нитки <span>dor tak 40/2</span></span>
+										<span class="related__price">12,80 руб</span>
+									</div>
+								</a>
+								{% endfor %}﻿
+							</div>
+						</div>
+
+					</div>
+					<div class="tab__content" id="related-tabs-3">
+
+						<div class="bz-slider bz-slider--related">
+							<div class="bz-slider__slides js-bz-slider--related">
+								{% for i in range(0, 11) %}
+								<a class="related__item" href="#">
+									<div class="related__img">
+										<img src="img/products/thread/{{i+1}}.png" alt="Атлас дюпон «izumrud»">
+									</div>
+									<div class="related__desc">
+										<span class="related__title">Нитки <span>dor tak 40/2</span></span>
+										<span class="related__price">12,80 руб</span>
+									</div>
+								</a>
+								{% endfor %}﻿
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
+
 		</div>
 		<!-- end card__related -->
+
+		<!-- begin card__colors -->
+		<div class="card__colors">
+
+			<h2 class="h2 page-title">Другие цвета</h2>
+
+			<div class="product-item__wrap">
+				{% for i in range(0, 4) %}
+					{{ item.productItemColor() }}
+				{% endfor %}﻿				
+			</div>
+
+		</div>
+		<!-- end card__colors -->
+
+		<div class="button-box">
+			<a href="#" class="button button--transparent button--info card__btn--back">Вернуться в каталог</a>
+		</div>
 
 	</div>
 </main>	
