--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -33,28 +33,10 @@
 				<div class="change-city__in">
 					<ul class="change-city__list">
 						{% import "data/data.html" as cities %}		
-						{% for item in cities.cityList1 %}					
-							<li class="change-city__item">{{ item.city }}</li>										
+						{% for item in cities.cityList %}					
+							<li class="change-city__item">{{ item.city }}</li>									
 						{% endfor %}
 					</ul>	
-					<ul class="change-city__list">
-						{% import "data/data.html" as cities %}		
-						{% for item in cities.cityList2 %}					
-							<li class="change-city__item">{{ item.city }}</li>										
-						{% endfor %}
-					</ul>	
-					<ul class="change-city__list">
-						{% import "data/data.html" as cities %}		
-						{% for item in cities.cityList3 %}					
-							<li class="change-city__item">{{ item.city }}</li>										
-						{% endfor %}
-					</ul>	
-					<ul class="change-city__list">
-						{% import "data/data.html" as cities %}		
-						{% for item in cities.cityList4 %}					
-							<li class="change-city__item">{{ item.city }}</li>										
-						{% endfor %}
-					</ul>
 				</div>
 				<ul class="change-city__list change-city__list_country">			
 					<li class="change-city__item change-city__item--belarus">Белоруссия</li>	
