--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -42,7 +42,7 @@ $color-muted            :#d6d6d6;
 $color-primary			:$color-main;
 $color-success			:#8cc152;
 $color-info             :#2386dc;
-$color-danger           :#c9302c;
+$color-danger           :#ff0600;
 
 $color-link             :$color-info;
 
