--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -32,8 +32,16 @@
 		background-position: 50% 50%;
 		&:hover{
 			background-size: 104%;
+			.new__img{
+				transform: scale(1.1);
+			}
 		}
 	}//.new__item
+
+	&__img{
+		transform: scale(1);
+		@include tr;
+	}//.new__img
 
 	&__title{
 		padding: 7px 15px;
@@ -91,30 +99,72 @@
 
 .bz-grid{
 	margin-top: $base-indent;
+
+	@include respond-to(xs) {
+		margin-top: 0;
+	}
 	
 	&-in{
 		min-height: 550px;
+		max-height: 610px;
 		@include row-flex;
 
-		@include respond-to(xs) {
-			min-height: auto;
+		@include respond-to(sm) {
+			min-height: initial;
+			max-height: initial;
 		}
 	}
+
 	&-col{
 		@include respond-to(xs) {
 			margin-top: $gutter/2;
-		}		
+		}	
+		// @include respond-to(sm) {
+		// 	&-sm-reverse{
+		// 		width: calc(100% - 20px);
+		// 		@include row-flex;
+		// 		.bz-grid-row-2{
+		// 			margin-top: $gutter;
+		// 			@include size(6);
+		// 		}
+		// 	}			
+		// }
+		&-sm-2{
+			@include respond-to(sm) {
+				@include size-sm(6);
+			}
+		}
+		&-sm-12{
+			@include respond-to(sm) {
+				@include size-sm(12);
+			}
+		}
+		&-sm-reverse{
+			@media screen and (max-width: 768px) and (min-width: 481px) {
+				height: 100%;
+				width: 100%;
+				margin: 0;
+				display: flex;
+				.bz-grid-row{
+					height: 100%;
+					margin: $gutter $gutter/2 0;
+				}
+			}
+		}	
 	}
+
 	&-col-3{
 		@include col;
 		@include size(4);
 		@include size-xs(12);
 	}
+
 	&-col-2{
 		@include col;
 		@include size(8);
 		@include size-xs(12);
 	}
+
 	&-row{
 		height: 100%;
 		min-height: 210px;
@@ -148,9 +198,8 @@
 			}		
 		}
 	}
-	img{
-		height: 100%;
-	}
+
+	img{height: 100%;}
 }//.bz-grid
 
 .advantages-item{
