--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -83,7 +83,7 @@ related:
 
 				<!-- begin item-select -->
 				<div class="item-select__group card__item-select">
-					<div class="item-select js-item-select">
+					<div class="item-select item-select--color js-item-select">
 						<div class="item-select__caption">Цвет</div>
 						<div class="item-select__value">
 							<span class="item-select__color" data-item-select-color="#233e23"></span>
@@ -93,36 +93,50 @@ related:
 							<div class="item-select__item">
 								<span class="item-select__color" data-item-select-color="#233e23"></span>
 								<span class="item-select__title">Темно зеленый</span>
-								<span class="item-select__subtitle">в наличии</span>
+								<span class="item-select__subtitle stock">в наличии</span>
 							</div>
 							<div class="item-select__item">
 								<span class="item-select__color" data-item-select-color="#46358d"></span>
-								<span class="item-select__title">Темно зеленый</span>
+								<span class="item-select__title">Темно синий</span>
 								<span class="item-select__subtitle ends">заканчивается</span>
 							</div>
 							<div class="item-select__item">
 								<span class="item-select__color" data-item-select-color="#e4d8cb"></span>
-								<span class="item-select__title">Темно зеленый</span>
-								<span class="item-select__subtitle">в наличии</span>
+								<span class="item-select__title">Бежевый</span>
+								<span class="item-select__subtitle stock">в наличии</span>
 							</div>
 						</div>
 					</div>
-					<div class="item-select item-select--count js-item-select is-hidden">
+					<div class="item-select item-select--count js-item-select">
 						<div class="item-select__caption">Количество</div>
 						<div class="item-select__value">
-							<div class="item-select__control item-select__control--minus"></div>
+							<div class="item-select__control item-select__control--minus js-item-select-control--minus"></div>
 							<span class="item-select__title">Выбрать</span>
-							<div class="item-select__control item-select__control--plus"></div>
+							<input type="text" class="item-select__input" style="display: none;" spellcheck="false">
+							<div class="item-select__control item-select__control--plus js-item-select-control--plus"></div>
 						</div>
 						<div class="item-select__list">
-							<div class="item-select__item">
-								<span class="item-select__title">5 м в нарезку</span>
+							<div class="item-select__item item-select__item--header">
+								<span class="item-select__title">Купить от:</span>
+								<span class="item-select__subtitle">Цена за метр:</span>
 							</div>
 							<div class="item-select__item">
-								<span class="item-select__title">25 м <span>(1 рулон)</span></span>
+								<span class="item-select__title">1 м</span>
+								<span class="item-select__subtitle">340,00 руб.</span>
 							</div>
 							<div class="item-select__item">
-								<span class="item-select__title">Темно зеленый</span>
+								<div class="item-select__title_wrap">
+									<span class="item-select__title">15 м </span>
+									<span class="item-select__title_desc">(рулон)</span>
+								</div>
+								<span class="item-select__subtitle">4 335,00 руб. <span>-15%</span></span>
+							</div>
+							<div class="item-select__item">
+								<div class="item-select__title_wrap">
+									<span class="item-select__title">150 м</span>
+									<span class="item-select__title_desc">(10 рулонов)</span>
+								</div>
+								<span class="item-select__subtitle">38 250,00 руб. <span>-25%</span></span>
 							</div>
 						</div>
 					</div>
